
Added [[file:mrcal-python-api-reference.html#-sorted_eig][=mrcal.sorted_eig()=]]

mrcal_rectification_maps() supports latlon AND pinhole rectification

mrcal builds with clang

mrcal-from-kalibr, mrcal-to-kalibr
mrcal-from-ros

write_point_cloud_as_ply() exported

lensmodel parsing: more detailed error codes

* Migration notes 2.3 -> 2.4

commit 76248fce8655fba0aec1175157cbe8f8da055b7a
Date:   Wed Jun 21 18:24:50 2023 -0700
  do_optimize_calobject_warp is true ONLY if Nobservations_board>0 is also true
  THIS IS A C-API-BREAKING CHANGE: mrcal_pack_solver_state_vector() and
  mrcal_unpack_solver_state_vector() now take one more argument.
  Prior to this patch you could get into an inconsistent state where different
  parts of the code has different ideas about what Nstate was


Python API: renamed residuals_chessboard -> residuals_board
The previous name is still available for backwards compatibility.
Use the new name if you can. You don't HAVE to

* todo
- "pydoc3 mrcal" should show everything. It doesn't. "compose_rt" isn't there,
  for instance

- mrcal-stereo: during the rectification (or maybe disparity search) stage C-c
  doesn't work.

** new implied_Rt10__from_unprojections

Here's a new flavor of that function, to make mrcal-convert-lensmodel work
better. Test it.

#+begin_src python

# This thing appears to be sensitive to initialization. Either make it robust,
# or put back the random trials.
#
# To reproduce, get the models here:
#   https://github.jpl.nasa.gov/kogan/uavsar/wiki/2021-04-01--eo-eo-ir-calibration
#
# And do
#
#   /mrcal-convert-lensmodel --radius 0 --intrinsics-only --viz --sampled LENSMODEL_CAHVOR /tmp/camera-330075.cameramodel
#
# I've observing diverging behavior. Sometimes it fits almost perfectly (error
# << 0.5 pixels everywhere). Other times it's worse (error ~ 0.5 in many places)
#
# This is what implied_Rt10__from_unprojections_tweaked_to_work_better() is
# meant to address





