@@ -438,11 +438,53 @@ This reads and write the [[#cameramodel-in-c][=mrcal_cameramodel_t= structures]]
 =.cameramodel= file format is supported by these C functions. The Python API
 supports more formats.
 
-* Image reading/writing
-mrcal includes simple functions for reading/writing images. These use the
-[[https://freeimage.sourceforge.io/][freeimage library]]. These functions aren't interesting, or better than any other
-functions you may have already. The declarations are in [[https://www.github.com/dkogan/mrcal/blob/master/mrcal-image.h][=mrcal-image.h=]], and the
-documentation lives there.
+* Images
+mrcal defines simple image types in [[https://www.github.com/dkogan/mrcal/blob/master/mrcal-image.h][=mrcal-image.h=]]:
+
+- =mrcal_image_int8_t=
+- =mrcal_image_uint8_t=
+- =mrcal_image_int16_t=
+- =mrcal_image_uint16_t=
+- =mrcal_image_int32_t=
+- =mrcal_image_uint32_t=
+- =mrcal_image_int64_t=
+- =mrcal_image_uint64_t=
+- =mrcal_image_float_t=
+- =mrcal_image_double_t=
+- =mrcal_image_bgr_t=
+
+These are the basic not-necessarily-contiguous arrays. The =bgr= type is used
+for color images:
+
+#+begin_src c
+typedef struct { uint8_t bgr[3]; } bgr_t;
+#+end_src
+
+Simple accessor and manipulation functions are available for each of these
+types (replacing each =T= below):
+
+#+begin_src c
+T* mrcal_image_T_at(mrcal_image_T_t* image, int x, int y);
+
+const T* mrcal_image_T_at_const(const mrcal_image_T_t* image, int x, int y);
+
+mrcal_image_T_t mrcal_image_T_crop(mrcal_image_T_t* image,
+                                   int x0, int y0,
+                                   int w,  int h);
+#+end_src
+
+And for =uint8_t=, =uint16_t= and =bgr_t= we can also read and write image files:
+
+#+begin_src c
+bool mrcal_image_T_save (const char* filename, const mrcal_image_T_t*  image);
+
+bool mrcal_image_T_load( mrcal_image_T_t*  image, const char* filename);
+#+end_src
+
+These use the [[https://freeimage.sourceforge.io/][freeimage library]]. These functions aren't interesting, or better
+than any other functions you may have already. The declarations are in
+[[https://www.github.com/dkogan/mrcal/blob/master/mrcal-image.h][=mrcal-image.h=]], and the documentation lives there.
+
 
 * Dense stereo
 
